# python-monorepo-template

./: .gitignore  README.md
libs/lib-one/: pyproject.toml
libs/logger/: Makefile  pyproject.toml
stack/project-one/: Dockerfile  Makefile  pyproject.toml
stack/project-two/: pyproject.toml
tools/: DockerImages.mk  PythonPackages.mk
