[tool.poetry]
name = "project-two"
version = "0.1.0"
description = ""
authors = ["Conor-OD"]

[tool.poetry.dependencies]
python = "^3.7"
lib-one = ""

[tool.poetry.dev-dependencies]
pytest = "^5.2"
lib-one = {path = "../../libs/lib-one", develop = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
